2002-12-20 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in: Added gconf key for video bandwidth.

	* src/common.h: Added widget for video bandwidth.

	* src/config.cpp: Added notifier when video bandwidth is modified 
	and updated the tr_fps and tr_vq notifiers so that they do not
	change the FPS and the video quality but the limits.

	* src/druid.cpp: Changed the druid so that it updates the values
	for the limits.

	* src/endpoint.cpp: Fixed code.

	* src/misc.cpp: Removed frames to see what it looks like and to
	follow HIG. This change will possibly be reverted back.

	* src/pref_window.cpp: Put jitter buffer in the audio codecs 
	settings section.

2002-12-20 Damien Sandras  <dsandras@seconix.com>

	* src/common.h: Removed unused widgets.

	* src/config.cpp: Changed notifiers so that changing the FPS limit
	and the videoquality change the lower limit.

	* src/druid.cpp: Removed enable_fps as it is now implicit. No need
	to explode the bandwidth.

	* src/endpoint.cpp: Added video bandwidth limitation, based on
	dynamic quality and dynamic FPS adjustment above a given limit.
	GM will try to reach the given bandwidth while not going below
	the given quality and FPS limits.
	
	* src/gnomemeeting.h: Removed unneeded #include.

	* src/misc.cpp: Fixed frame style.

	* src/pref_window.cpp: Changed descriptions for FPS and quality
	as they are now lowest limits.

	* src/tray.cpp: Removed unneeded #include.

	* src/videograbber.cpp, src/videograbber.h: Do not limit the FPS.
	It will be done automatically during calls.
	
2002-12-20  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ca" to ALL_LINGUAS.

2002-12-19 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp, src/cleaner.cpp: Changed the exit sequence.

	* src/misc.cpp: Changed wrong #ifdef in #ifndef.
	
2002-12-18 Damien Sandras  <dsandras@seconix.com>

	* src/common.h: Added tree_view from the LDAP window as member