@@ -1,5 +1,14 @@
 2002-12-20 Damien Sandras  <dsandras@seconix.com>
 
+	* src/config.cpp: Modified servers list notifier.
+	
+	* src/ldap_window.cpp: Adds "New Server" in the servers list when the
+	user decides to add a server.
+	
+	* src/misc.cpp: Put frames back in the preferences for consistency.
+
+2002-12-20 Damien Sandras  <dsandras@seconix.com>
+
 	* configure.in: Incremented SCHEMA_AGE.
 
 	* gnomemeeting.schemas.in.in: Added gconf key for video bandwidth.
